crates/macro/tests/ui/bogus_stubs_condition.stderr
error[E0539]: malformed `cfg` attribute input
 --> tests/ui/bogus_stubs_condition.rs:3:1
  |
3 | #[externref(stubs("what"))]
  | ^^^^^^^^^^^^^^^^^^------^^^
  | |                 |
  | |                 expected a valid identifier here
  | help: must be of the form: `cfg(predicate)`
  |
  = note: for more information, visit <https://doc.rust-lang.org/reference/conditional-compilation.html#the-cfg-attribute>
  = note: this error originates in the attribute macro `externref` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0428]: the name `unused` is defined multiple times
 --> tests/ui/bogus_stubs_condition.rs:6:5
  |
3 | #[externref(stubs("what"))]
  | --------------------------- previous definition of the value `unused` here
...
6 |     pub fn unused(ptr: *const u8, len: usize);
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `unused` redefined here
  |
  = note: `unused` must be defined only once in the value namespace of this module
